--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,42 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <%= link_to "Sign up", new_user_registration_path %>
+
 <% if user_signed_in? %>
+  <%= form_tag import_keywords_path, method: :post, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "Import CSV" %>
+  <% end %>
+
+  <h2>Your Keywords:</h2>
+  <ul>
+    <% @keywords.each do |keyword| %>
+      <li>
+        <%= keyword.keyword %> -
+        AdWords Advertisers: <%= keyword.search_results&.adwords_advertisers || 'N/A' %> -
+        Total Links: <%= keyword.search_results&.total_links || 'N/A' %> -
+        Total Results: <%= keyword.search_results&.total_results || 'N/A' %>
+      </li>
+    <% end %>
+  </ul>
+
+  <h2>Search Results:</h2>
+  <ul>
+    <% @search_results.each do |search_result| %>
+      <li>
+        Keyword: <%= search_result.keyword&.keyword %> -
+        AdWords Advertisers: <%= search_result.adwords_advertisers || 'N/A' %> -
+        Total Links: <%= search_result.total_links || 'N/A' %> -
+        Total Results: <%= search_result.total_results || 'N/A' %>
+      </li>
+    <% end %>
+  </ul>
+
+  <%= form_tag search_results_path, method: :get do %>
+    <%= text_field_tag :query, params[:query], placeholder: "Search keywords" %>
+    <%= submit_tag "Search" %>
+  <% end %>
+
   <%= form_tag destroy_user_session_path, method: :delete do %>
     <%= submit_tag "Sign out" %>
   <% end %>
