--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -12,3 +12,9 @@
 </div>
 
 <%= link_to "New keyword", new_keyword_path %>
+
+<%= form_tag import_keywords_path, multipart: true do %>
+  <label for="file">Choose a CSV file:</label>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Import CSV" %>
+<% end %>
